terraform/security_groups.tf
resource "aws_security_group" "alb" {

  name = "${var.project_name}-alb-sg"

  vpc_id = aws_vpc.main.id

  ingress {
    description = "HTTP from internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-alb-sg"
  }
}

resource "aws_security_group" "ec2" {

  name = "${var.project_name}-ec2-sg"

  vpc_id = aws_vpc.main.id


  ingress {

    description = "App traffic from ALB"

    from_port = 5000
    to_port   = 5000

    protocol = "tcp"

    security_groups = [
      aws_security_group.alb.id
    ]
  }


  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }


  tags = {
    Name = "${var.project_name}-ec2-sg"
  }
}

resource "aws_security_group" "rds" {

  name = "${var.project_name}-rds-sg"

  vpc_id = aws_vpc.main.id


  ingress {

    description = "MySQL from EC2"

    from_port = 3306
    to_port   = 3306

    protocol = "tcp"

    security_groups = [
      aws_security_group.ec2.id
    ]
  }


  tags = {
    Name = "${var.project_name}-rds-sg"
  }
}
